[tool.poetry]
name = "portfolio-app"
version = "0.1.0"
description = "REST API for a portfolio publication site"
authors = ["Aleksandr <amvorobei@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.3"
python-dotenv = "^0.20.0"
django-environ = "^0.9.0"
djangorestframework = "^3.13.1"
djangorestframework-simplejwt = "^5.2.0"
drf-yasg = "^1.21.3"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
